# FastApi-HomeTask

./: ReadMe.Md  books.db  pyproject.toml  requirement.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_api.py  test_crud.py
